<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
     
        android:text="@string/fuel" />

    <EditText
        android:id="@+id/etfuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_marginLeft="28dp"
        
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="15dp"
        android:text="@string/distance" />
	
    <EditText
        android:id="@+id/etdistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/editText1"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnconsumption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/EditText01"
        android:layout_marginTop="20dp"
        android:text="@string/consumption" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_marginTop="22dp"
        android:text="@string/txtconsumptions" />

    <EditText
        android:id="@+id/etconsumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/textView5"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView3"
        android:layout_centerVertical="true"
        android:text="@string/txtjourney" />

    <EditText
        android:id="@+id/etjourney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnfuelj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/EditText03"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="18dp"
        android:text="@string/txtfuelj" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="18dp"
        android:text="@string/txtfneeded" />

    <EditText
        android:id="@+id/etfneeded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/EditText03"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="19dp"
        android:text="@string/txtprice" />

    <EditText
        android:id="@+id/etprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignLeft="@+id/editText2"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnjprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_below="@+id/editText3"
        android:layout_marginTop="14dp"
        android:layout_toLeftOf="@+id/editText3"
        android:text="@string/btnjourney" />

    <EditText
        android:id="@+id/ettotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      
        android:ems="10"
        android:inputType="numberDecimal" />
</LinearLayout>
</ScrollView>
